...
                android:layout_height="wrap_content"
                android:labelFor="@+id/username_tv"
                android:text="@string/signup_username_title" />

            <!-- Username input -->
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="username"
                android:background="@drawable/rounded_border"
                android:fontFamily="sans-serif"
...
                android:layout_height="wrap_content"
                android:labelFor="@+id/username"
                android:text="@string/Surname" />

            <!-- UserSurname input -->
            <EditText
                android:id="@+id/usersurname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="username"
                android:background="@drawable/rounded_border"
                android:fontFamily="sans-serif"
...
                android:layout_height="wrap_content"
                android:labelFor="@+id/username"
                android:text="@string/Email" />

            <!-- UserSurname input -->
            <EditText
                android:id="@+id/usermail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="usermail"
                android:background="@drawable/rounded_border"
                android:fontFamily="sans-serif"
...
                android:layout_height="wrap_content"
                android:labelFor="@+id/username"
                android:text="@string/login_password_title" />

            <!-- UserSurname input -->
            <EditText
                android:id="@+id/userpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="userpassword"
                android:background="@drawable/rounded_border"
                android:fontFamily="sans-serif"
...
                android:paddingHorizontal="12dp"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/rounded_border"
            android:backgroundTint="@color/blue"
            android:text="@string/CreateAccountSignUp"
...
