...
    <string name="previous_song_description">Previous song</string>
    <string name="information_song">Information</string>
    <string name="name">Name</string>
    <string name="Artista">Artist</string>
    <string name="musical_note_description">Musical_note</string>
    <string name="genre_msg">Genre</string>
    <string name="dialog_delete_account_title">Are you sure you want to delete your account?</string>
    <string name="error_delete_account">The account could not be deleted</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="import_playlist_msg">The following shared playlist will be import:</string>
    <string name="configuracion">CONFIGURATION</string>
    <string name="laguage">Language</string>
    <string name="log_out">Log out</string>
    <string name="Log_out_info">Sign out of this device</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_info">Delete your profile in the app</string>
    <string name="Profile">Profile</string>
    <string name="Username">Username</string>
    <string name="play_description">Play Button</string>
    <string name="pause_description">Pause Button</string>
    <string name="stop_description">Stop Button</string>
    <string name="image_description">Image of the song</string>
...
