...
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="homeIcon"
            app:srcCompat="@drawable/ic_musicgo" />

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="Settings"
            app:srcCompat="@drawable/ic_settings" />
...
